Fix line wrapped nav items

--- a/src/style.css
+++ b/src/style.css
@@ -121,6 +121,9 @@ nav {
   align-items: center;
   justify-content: space-between;
 }
+nav > * {
+  white-space: nowrap;
+}
 nav .leading {
   grid-area: leading;
 }
